ejabberd (1.1.4-5) UNRELEASED; urgency=low

  * NOT RELEASED YET
  * Do not remove /etc/ejabberd on package purge to preserve user files if
    any (closes: #460459).

 -- Sergei Golovan <sgolovan@debian.org>  Sun, 13 Jan 2008 01:18:33 +0300

ejabberd (1.1.4-4) unstable; urgency=low

  * Added a patch which fixes access rule check in mod_irc.
  * Added a patch which fixes ejabberd build using erlang R12B-0.
  * Increased number of erlang ports in /etc/ejabberd/default. The default
    value of 1024 allows too few simultaneous connections (from 300 to 500
    for both clients and servers depending of whether they use SSL or traffic
    compression).
  * Fixed shell backquotes in ejabberd and ejabberdctl manual pages. Also
    bumped their versions to 1.1.4.
  * Added a note about binding to privileged ports to README.Debian.
  * Fixed a race condition between starting log handler and port listener.
    Otherwise, error reports about port binding can't get into log file
    (closes: #458518).

 -- Sergei Golovan <sgolovan@debian.org>  Tue, 01 Jan 2008 17:09:57 +0300

ejabberd (1.1.4-3) unstable; urgency=low

  * Applied a patch by upstream which fixes usage of relational databases in
    ejabberd modules while using internal or LDAP-based authentication
    (closes: #446848). The patch was adopted from ejabberd SVN by Andreas
    Oberritter.

 -- Sergei Golovan <sgolovan@debian.org>  Tue, 16 Oct 2007 10:34:07 +0400

ejabberd (1.1.4-2) unstable; urgency=low

  * Moved ejabberd application directory from
    /usr/lib/erlang/lib/ejabberd-1.1.4 to /usr/lib/ejabberd to avoid conflicts
    of modules names (specifically, eldap module conflicts with shiiped in Yxa
    SIP server).

 -- Sergei Golovan <sgolovan@debian.org>  Fri, 12 Oct 2007 10:07:19 +0400

ejabberd (1.1.4-1) unstable; urgency=low

  * New upstream release.
  * Fixed debian/watch file.
  * Removed ejabberd_sm.diff patch. This makes ejabberd using recommended