@@ -4,7 +4,8 @@ Priority: optional
 Maintainer: Torsten Werner <twerner@debian.org>
 Uploaders: Sergei Golovan <sgolovan@debian.org>
 Build-Depends: cdbs (>= 0.4.23-1.1), debhelper (>= 5), quilt, patchutils (>= 0.2.25), cdbs (>= 0.4.27-1), erlang-nox, erlang-dev (>= 1:11.b.4-4), grep-dctrl, libexpat1-dev, libssl-dev, zlib1g-dev
-Standards-Version: 3.7.2
+Standards-Version: 3.7.3
+Homepage: http://www.process-one.net/en/projects/ejabberd/ 
 XS-X-Vcs-Svn: svn+ssh://svn.debian.org/svn/collab-maint/deb-maint/ejabberd/trunk
 
 Package: ejabberd
@@ -27,5 +28,3 @@ Description: Distributed, fault-tolerant Jabber/XMPP server written in Erlang
   - Jabber Users Directory, based on users vCards
   - Service Discovery
   - Shared roster
- .
- Homepage: http://www.process-one.net/en/projects/ejabberd/ 
