@@ -7,4 +7,3 @@ Section: Apps/Net
 Format: HTML
 Index: /usr/share/doc/ejabberd/guide.html
 Files: /usr/share/doc/ejabberd/*.html
- 
