@@ -3,6 +3,9 @@ ejabberd (1.1.4-5) UNRELEASED; urgency=low
   * NOT RELEASED YET
   * Do not remove /etc/ejabberd on package purge to preserve user files if
     any (closes: #460459).
+  * Bumped standards version to 3.7.3.
+  * Added homepage header to debian control file.
+  * Fixed unnecessary space in doc-base.
 
  -- Sergei Golovan <sgolovan@debian.org>  Sun, 13 Jan 2008 01:18:33 +0300
 
